Fixes made for demo preview

--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html ng-app="AngularPortfolio" ng-controller="AppCtrl">
 <head>
-  <link rel="stylesheet" type="text/css" href="./lib/Gumby/css/gumby.css" />
+  <title>AngularJS 2nd Animation Demo</title>
+  <link rel="stylesheet" type="text/css" href="./lib/gumby-css/css/gumby.css" />
   <link rel="stylesheet" type="text/css" href="./lib/animate.css" />
   <link rel="stylesheet" type="text/css" href="./styles/app.css" />
   <link rel="stylesheet" type="text/css" href="./styles/animations.css" />
@@ -81,7 +82,7 @@
     <div class="row">
       <div class="inner">
         <div class="yearofmoo">
-          <a href="#" target="_blank" class="btn info">
+          <a href="http://www.yearofmoo.com/" target="_blank" class="btn info">
             <i class="icon-cloud"></i> http://www.yearofmoo.com
           </a>
         </div>
