--- a/app/index.html
+++ b/app/index.html
@@ -98,6 +98,15 @@
     </div>
   </footer>
 
-  <script type="text/javascript" src="/assets/app.js"></script>
+<script type="text/javascript" src="./bower_components/jquery/dist/jquery.js"></script>
+<script type="text/javascript" src="./lib/angular/angular.js"></script>
+<script type="text/javascript" src="./lib/angular/angular-animate.js"></script>
+<script type="text/javascript" src="./lib/angular/angular-route.js"></script>
+<script type="text/javascript" src="./bower_components/greensock-js/src/uncompressed/TweenMax.js"></script>
+<script type="text/javascript" src="./bower_components/lunr/lunr.js"></script>
+<script type="text/javascript" src="./db/data.js"></script>
+<script type="text/javascript" src="./scripts/animations.js"></script>
+<script type="text/javascript" src="./scripts/search.js"></script>
+<script type="text/javascript" src="./scripts/app.js"></script>
 </body>
 </html>
